fix(searchbar): add an explicit font-size for the input to avoid scaling when using safari on iphone

--- a/src/components/SearchBar/styles.scss
+++ b/src/components/SearchBar/styles.scss
@@ -5,3 +5,7 @@
   justify-content: center;
   margin-bottom: 2rem;
 }
+
+.searchbar__container input {
+  font-size: 1rem;
+}
